// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="ReplyList-root"
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
>
  <Relay(ReplyListCommentContainer)
    comment={
      Object {
        "id": "comment-1",
      }
    }
    disableReplies={false}
    indentLevel={1}
    key="comment-1"
    localReply={false}
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
      }
    }
    viewer={null}
  />
  <Relay(ReplyListCommentContainer)
    comment={
      Object {
        "id": "comment-2",
        "showConversationLink": true,
      }
    }
    disableReplies={false}
    indentLevel={1}
    key="comment-2"
    localReply={false}
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    showConversationLink={true}
    story={
      Object {
        "id": "story-id",
      }
    }
    viewer={null}
  />
</ForwardRef(forwardRef)>
`;

exports[`when there is more disables load more button 1`] = `
<ForwardRef(forwardRef)
  className="ReplyList-root"
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
>
  <Relay(ReplyListCommentContainer)
    comment={
      Object {
        "id": "comment-1",
      }
    }
    indentLevel={1}
    key="comment-1"
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
      }
    }
    viewer={null}
  />
  <Relay(ReplyListCommentContainer)
    comment={
      Object {
        "id": "comment-2",
      }
    }
    indentLevel={1}
    key="comment-2"
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
      }
    }
    viewer={null}
  />
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <ForwardRef(forwardRef)
        aria-controls="coral-comments-replyList-log--comment-id"
        className="coral coral-replyList-showAllButton"
        color="secondary"
        data-is-load-more={true}
        data-key-stop={true}
        disabled={true}
        fullWidth={true}
        id="coral-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </ForwardRef(forwardRef)>
    </Localized>
  </Indent>
</ForwardRef(forwardRef)>
`;

exports[`when there is more renders a load more button 1`] = `
<ForwardRef(forwardRef)
  className="ReplyList-root"
  data-testid="commentReplyList-comment-id"
  id="coral-comments-replyList-log--comment-id"
>
  <Relay(ReplyListCommentContainer)
    comment={
      Object {
        "id": "comment-1",
      }
    }
    indentLevel={1}
    key="comment-1"
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
      }
    }
    viewer={null}
  />
  <Relay(ReplyListCommentContainer)
    comment={
      Object {
        "id": "comment-2",
      }
    }
    indentLevel={1}
    key="comment-2"
    settings={
      Object {
        "reaction": Object {
          "icon": "thumb_up_alt",
          "label": "Respect",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
      }
    }
    viewer={null}
  />
  <Indent
    level={1}
    noBorder={true}
  >
    <Localized
      id="comments-replyList-showAll"
    >
      <ForwardRef(forwardRef)
        aria-controls="coral-comments-replyList-log--comment-id"
        className="coral coral-replyList-showAllButton"
        color="secondary"
        data-is-load-more={true}
        data-key-stop={true}
        disabled={false}
        fullWidth={true}
        id="coral-comments-replyList-showAll--comment-id"
        onClick={[Function]}
        variant="outlined"
      >
        Show All Replies
      </ForwardRef(forwardRef)>
    </Localized>
  </Indent>
</ForwardRef(forwardRef)>
`;
